# cppli

./: CMakeLists.txt  LICENSE  README.md
cppli/: cppli.hpp
cppli/internal/: cppli.cpp  module.hpp  nodes.cpp  nodes.hpp  variant.cpp  variant.hpp  visitor.hpp
tests/: main.cpp
